--- a/.github/workflows/workflow-dispatch.yml
+++ b/.github/workflows/workflow-dispatch.yml
@@ -22,13 +22,8 @@ on:
 
 jobs:
   log-the-inputs:
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          echo "Log level: $LEVEL"
-          echo "Tags: $TAGS"
-          echo "Environment: $ENVIRONMENT"
-        env:
-          LEVEL: ${{ inputs.logLevel }}
-          TAGS: ${{ inputs.tags }}
-          ENVIRONMENT: ${{ inputs.environment }}
+    uses: ./.github/workflows/reuseable-workflow.yaml
+    with:
+      tags: ${{ github.event.inputs.tags }}
+      level: ${{ github.event.inputs.logLevel }}
+      environment: ${{ github.event.inputs.environment }}
