--- a/.github/workflows/pr-template-suggester.yml
+++ b/.github/workflows/pr-template-suggester.yml
@@ -14,7 +14,7 @@ jobs:
             const { base, head } = context.payload.pull_request;
             let suggestion = '';
             
-            if (head.ref.startsWith('releases/') && base.ref === 'mains') {
+            if (head.ref.startsWith('releases/') && base.ref === 'main') {
               suggestion = '🚀 This looks like a release PR. Consider using the `release_to_master.md` template!';
             } else if (head.ref.startsWith('hotfix/') && base.ref === 'main') {
               suggestion = '🔥 This looks like a hotfix PR. Consider using the `hotfix_to_master.md` template!';
