--- a/.github/workflows/pr-template-suggester.yml
+++ b/.github/workflows/pr-template-suggester.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   suggest-template:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      pull-requests: write
     steps:
       - name: Suggest appropriate template
         uses: actions/github-script@v6
