--- a/.github/workflows/pr-template-suggester.yml
+++ b/.github/workflows/pr-template-suggester.yml
@@ -1,35 +1,68 @@
-name: Suggest PR Template
+name: PR Template Handler
 on:
   pull_request:
     types: [opened]
 
 jobs:
-  suggest-template:
+  apply-template:
     runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
+      contents: read
     steps:
-      - name: Suggest appropriate template
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Apply PR Template
         uses: actions/github-script@v6
         with:
           script: |
+            const fs = require('fs');
+            const path = require('path');
             const { base, head } = context.payload.pull_request;
             let suggestion = '';
-            
+
             if (head.ref.startsWith('releases/') && base.ref === 'main') {
               suggestion = '🚀 This looks like a release PR. Consider using the `release_to_master.md` template!';
             } else if (head.ref.startsWith('hotfix/') && base.ref === 'main') {
-              suggestion = '🔥 This looks like a hotfix PR. Consider using the `hotfix_to_master.md` template!';
+              templateFile = '.github/PULL_REQUEST_TEMPLATE/hotfix_to_master.md';
+              templateMessage = '🔥 Hotfix PR template automatically applied!';
             } else if (base.ref === 'dev') {
-              suggestion = '✨ This looks like a feature PR. Consider using the `feature_to_develop.md` template!';
+              templateFile = '.github/PULL_REQUEST_TEMPLATE/feature_to_develop.md';
+              templateMessage = '✨ Feature PR template automatically applied!';
+            } else {
+              console.log('No matching branch pattern found for PR template');
+              return;
             }
-            
-            if (suggestion) {
-              github.rest.issues.createComment({
+
+            try {
+              // Check if template file exists
+              if (!fs.existsSync(templateFile)) {
+                console.log(`Template file does not exist: ${templateFile}`);
+                return;
+              }
+              
+              // Read the template content
+              const templateContent = fs.readFileSync(templateFile, 'utf8');
+              
+              // Update the PR description with the template content
+              await github.rest.pulls.update({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: context.issue.number,
+                body: templateContent
+              });
+              
+              // Add a comment to notify the user
+              await github.rest.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                body: suggestion
+                body: templateMessage
               });
+              
+              console.log(`Applied PR template: ${templateFile}`);
+            } catch (error) {
+              console.error(`Error applying PR template: ${error}`);
             }
