feat: add new condition check when apply mergedown

--- a/.github/workflows/pr-template-suggester.yml
+++ b/.github/workflows/pr-template-suggester.yml
@@ -31,6 +31,9 @@ jobs:
             } else if (base.ref === 'dev') {
               templateFile = '.github/PULL_REQUEST_TEMPLATE/feature_to_develop.md';
               templateMessage = '✨ Feature PR template automatically applied!';
+            } else if (head.ref.startsWith('releases/') && base.ref === 'dev') {
+              templateFile = '.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md';
+              templateMessage = '🎁 Merge Down After Release with template automatically applied!!';
             } else {
               console.log('No matching branch pattern found for PR template');
               return;
