--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -4,6 +4,10 @@ on: [push]
 jobs:
   script:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
 
