feat: change variable in template pr when pr from release to dev

--- a/.github/workflows/pr-template-suggester.yml
+++ b/.github/workflows/pr-template-suggester.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Excute update-markdown script
+        run: |
+          chmod +x ./scripts/update-markdown.sh
+          ./scripts/update-markdown.sh
+
       - name: Apply PR Template
         uses: actions/github-script@v6
         with:
@@ -22,6 +27,28 @@ jobs:
             const path = require('path');
             const { base, head } = context.payload.pull_request;
 
+            function replaceTextInMarkdown(filePath, searchText, replaceText) {
+              try {
+                // อ่านไฟล์
+                const content = fs.readFileSync(filePath, "utf8");
+
+                // แทนที่ข้อความ
+                const updatedContent = content.replace(
+                  new RegExp(searchText, "g"),
+                  replaceText
+                );
+
+                // เขียนไฟล์กลับ
+                fs.writeFileSync(filePath, updatedContent, "utf8");
+
+                console.log("แทนที่ข้อความสำเร็จ!");
+                return updatedContent;
+              } catch (error) {
+                console.error("เกิดข้อผิดพลาด:", error);
+                return null;
+              }
+            }
+
             if (head.ref.startsWith('releases/') && base.ref === 'main') {
               templateFile = '.github/PULL_REQUEST_TEMPLATE/release_to_master.md';
               templateMessage = '🚀 Release PR template automatically applied!';
@@ -29,8 +56,13 @@ jobs:
               templateFile = '.github/PULL_REQUEST_TEMPLATE/hotfix_to_master.md';
               templateMessage = '🔥 Hotfix PR template automatically applied!';
             } else if (head.ref.startsWith('releases/') && base.ref === 'dev') {
-              templateFile = '.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md';
+              templateFile = '.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md'; Down
               templateMessage = '🎁 Merge Down After Release with template automatically applied!!';
+
+              replaceTextInMarkdown('.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md', '{{RELEASE_VERSION}}', head.ref.replace('releases/', ''));
+              replaceTextInMarkdown('.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md', '{{FROM}}', base.ref);
+
+
             } else if (base.ref === 'dev') {
               templateFile = '.github/PULL_REQUEST_TEMPLATE/feature_to_develop.md';
               templateMessage = '✨ Feature PR template automatically applied!';
