--- a/.github/workflows/pr-template-suggester.yml
+++ b/.github/workflows/pr-template-suggester.yml
@@ -56,11 +56,14 @@ jobs:
               templateFile = '.github/PULL_REQUEST_TEMPLATE/hotfix_to_master.md';
               templateMessage = '🔥 Hotfix PR template automatically applied!';
             } else if (head.ref.startsWith('releases/') && base.ref === 'dev') {
-              templateFile = '.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md'; Down
-              templateMessage = '🎁 Merge Down After Release with template automatically applied!!';
+              templateFile = '.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md';
+              
 
               replaceTextInMarkdown('.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md', '{{RELEASE_VERSION}}', head.ref.replace('releases/', ''));
               replaceTextInMarkdown('.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md', '{{FROM}}', base.ref);
+
+
+              templateMessage = '🎁 Merge Down After Release with template automatically applied!!';
 
 
             } else if (base.ref === 'dev') {
