--- a/.github/workflows/pr-template-suggester.yml
+++ b/.github/workflows/pr-template-suggester.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
+            let isChangeFile = false;
             const fs = require('fs');
             const path = require('path');
             const { base, head } = context.payload.pull_request;
@@ -43,7 +44,7 @@ jobs:
                 fs.writeFileSync(replacedFileName, updatedContent, "utf8");
 
                 console.log("✅ แทนที่ข้อความสำเร็จ!");
-                return updatedContent;
+                return replacedFileName;
               } catch (error) {
                 console.error("🚨 เกิดข้อผิดพลาด:", error);
                 return null;
@@ -56,15 +57,12 @@ jobs:
             } else if (head.ref.startsWith('hotfix/') && base.ref === 'main') {
               templateFile = '.github/PULL_REQUEST_TEMPLATE/hotfix_to_master.md';
               templateMessage = '🔥 Hotfix PR template automatically applied!';
+
             } else if (head.ref.startsWith('releases/') && base.ref === 'dev') {
-              
 
-              replaceTextInMarkdown('.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md', '{{RELEASE_VERSION}}', head.ref.replace('releases/', ''));
-              replaceTextInMarkdown('.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md', '{{FROM}}', base.ref);
-
-              templateFile = '.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop_temp.md';
+              isChangeFile = true;
+              templateFile = '.github/PULL_REQUEST_TEMPLATE/merge_down_to_develop.md';
               templateMessage = '🎁 Merge Down After Release with template automatically applied!!';
-
 
             } else if (base.ref === 'dev') {
               templateFile = '.github/PULL_REQUEST_TEMPLATE/feature_to_develop.md';
@@ -80,16 +78,22 @@ jobs:
                 console.log(`Template file does not exist: ${templateFile}`);
                 return;
               }
+
+              # Replace text in the template file
+              
               
               // Read the template content
               const templateContent = fs.readFileSync(templateFile, 'utf8');
+
+              const finalContent = templateContent.replace(/{{RELEASE_VERSION}}/g, head.ref.replace('releases/', ''))
+                .replace(/{{FROM}}/g, base.ref);
               
               // Update the PR description with the template content
               await github.rest.pulls.update({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 pull_number: context.issue.number,
-                body: templateContent
+                body: isChangeFile ? finalContent : templateContent
               });
               
               // Add a comment to notify the user
