--- a/.github/workflows/stupid-job.yml
+++ b/.github/workflows/stupid-job.yml
@@ -1,66 +1,20 @@
-name: Stupid Jobs Workflow
 on:
   push:
-    branches: [main]
-  workflow_dispatch:
-    inputs:
-      stupidity-level:
-        description: "Level of stupidity"
-        required: false
-        default: "medium"
-        type: choice
-        options:
-          - low
-          - medium
-          - high
-          - extreme
-      target-name:
-        description: "Name of the target person"
-        required: false
-        default: "Random Developer"
-      enable-chaos:
-        description: "Enable chaos mode"
-        required: false
-        default: false
-        type: boolean
+    branches:
+      - main
 
 jobs:
-  stupid-job:
+  hello_world_job:
+    name: A job to say hello
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Hello world action step
+        id: hello
+        uses: /
         with:
-          node-version: "20"
+          who-to-greet: Mona the Octocat
 
-      - name: Install Stupid Job dependencies
-        run: |
-          cd .github/actions/stupid-job
-          npm install
-
-      - name: Execute Stupid Job
-        id: stupid
-        uses: ./actions/stupid-job
-        with:
-          stupidity-level: ${{ github.event.inputs.stupidity-level || 'medium' }}
-          target-name: ${{ github.event.inputs.target-name || 'Random Developer' }}
-          enable-chaos: ${{ github.event.inputs.enable-chaos || 'false' }}
-
-      - name: Display Stupid Results
-        run: |
-          echo "🎪 Stupid Job Results:"
-          echo "💬 Message: ${{ steps.stupid.outputs.stupid-message }}"
-          echo "🌪️ Chaos Level: ${{ steps.stupid.outputs.chaos-level }}"
-          echo "⏰ Time Wasted: ${{ steps.stupid.outputs.time-wasted }}"
-
-      - name: Final Stupid Message
-        run: |
-          echo "🎉 Congratulations! You've successfully run the most useless GitHub Action!"
-          echo "🏆 Achievement Unlocked: Master of Digital Procrastination"
-          echo "📊 Productivity Level: -1000%"
-          echo "🎯 Mission Accomplished: Nothing useful was done today!"
+      # Use the output from the `hello` step
+      - name: Get the output time
+        run: echo "The time was ${{ steps.hello.outputs.time }}"
