--- a/.github/workflows/stupid-job.yml
+++ b/.github/workflows/stupid-job.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: /
+        uses: ./
         with:
           who-to-greet: Mona the Octocat
 
