--- a/.github/workflows/stupid-job.yml
+++ b/.github/workflows/stupid-job.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Hello world action step
         id: hello
         uses: ./
