--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,25 @@
-name: Hello World
-description: Greet someone and record the time
+name: Stupid Job
+description: A fun GitHub Action that comments on PRs and records the time
 
 inputs:
-  who-to-greet: # id of input
-    description: Who to greet
+  who-to-greet:
+    description: Who to greet in the message
     required: true
     default: World
+  
+  github-token:
+    description: GitHub token for API authentication
+    required: true
+    default: ${{ github.token }}
+  
+  message:
+    description: Custom message to post on the PR
+    required: false
+    default: ""
 
 outputs:
-  time: # id of output
-    description: The time we greeted you
+  time:
+    description: The time when the greeting was created
 
 runs:
   using: node20
