fix: add missing run-name and permissions to Stupid Job workflow

--- a/.github/workflows/stupid-job.yml
+++ b/.github/workflows/stupid-job.yml
@@ -1,10 +1,12 @@
 name: Stupid Job PR Commenter
+run-name: "Stupid Job PR Commenter"
 
 on:
   pull_request:
     types: [opened, reopened, synchronize]
 
 permissions:
+  actions: read
   issues: write
   pull-requests: write
   contents: read
